Use maintenance mode

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,18 +5,19 @@
 
 <body>
 
-  {% include header.html %}
-
   {% if site.maintenance_mode %}
-  <div class="alert alert-warning" role="alert">
-    <strong>¡Atención!</strong> El sitio se encuentra en modo de mantenimiento.
+
+  <div style="text-align: center; max-width: 600px; padding: 20px; margin: auto;">
+    <p>El sitio de State of the Map LATAM 2024 está en desarrollo.</p>
+    <p>Visita el código fuente en <a href="https://github.com/osmlatam/sotm-latam-2024">github.com/sotm-latam-2024</a>
+    </p>
   </div>
+
   {% else %}
+  {% include header.html %}
   {{ content }}
-  {% endif %}
-
-
   {% include footer.html %}
+  {% endif %}
 
 </body>
 
