--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
 
   <div style="text-align: center; max-width: 600px; padding: 20px; margin: auto;">
     <p>El sitio de State of the Map LATAM 2024 está en desarrollo.</p>
-    <p>Visita el código fuente en <a href="https://github.com/osmlatam/sotm-latam-2024">github.com/sotm-latam-2024</a>
+    <p>Visita el código fuente en <a
+        href="https://github.com/osmlatam/sotm-latam-2024">github.com/osmlatam/sotm-latam-2024</a>
     </p>
   </div>
 
