--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,26 +6,26 @@
   <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
   <meta name="description" content="The Latin American OpenStreetMap Conference">
   <meta name="author" content="OpenStreetMap Latinoamérica">
-  <meta property="og:image" content="{{ site.website }}/images/SOTM_2019_CLARO.png">
-  <meta property="og:site_name" content="State of the Map Latam 2019">
+  <meta property="og:image" content="{{ site.website }}/images/SOTM_2024_CLARO.png">
+  <meta property="og:site_name" content="State of the Map Latam 2024">
   <meta property="og:type" content="website">
   <meta property="og:title" content="{{ site.title }}">
   <meta property="og:description"
-  content="La Conferencia Latinoamericana de OpenStreetMap. 14, 15 Y 16 DE NOVIEMBRE, ENCARNACIÓN - PARAGUAY.">
+    content="La Conferencia Latinoamericana de OpenStreetMap. 14, 15 Y 16 DE NOVIEMBRE, ENCARNACIÓN - PARAGUAY.">
   <meta property="og:url" content="{{ site.website }}">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@osmlatam">
-  <meta property="twitter:image" content="{{ site.website }}/images/SOTM_2019_CLARO.png">
+  <meta property="twitter:image" content="{{ site.website }}/images/SOTM_2024_CLARO.png">
   <meta name="twitter:title" content="{{ site.title }}">
   <meta name="twitter:description"
-  content="La conferencia latinoamericana de OpenStreetMap. 14, 15 Y 16 DE NOVIEMBRE, ENCARNACIÓN - PARAGUAY.">
+    content="La conferencia latinoamericana de OpenStreetMap. 7 y 8 de deciembre, Belém, Brasil.">
   <meta name="twitter:url" content="{{ site.website }}">
 
-<!-- Translations -->
-<link hreflang="en" href="{{ site.website }}/en/" rel="alternate">
-<link hreflang="es" href="{{ site.website }}" rel="alternate">
-<link hreflang="pt-br" href="{{ site.website }}/pt/" rel="alternate">
+  <!-- Translations -->
+  <link hreflang="en" href="{{ site.website }}/en/" rel="alternate">
+  <link hreflang="es" href="{{ site.website }}" rel="alternate">
+  <link hreflang="pt-br" href="{{ site.website }}/pt/" rel="alternate">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -37,25 +37,26 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/3.3.7/css/grayscale.min.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+    integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/3.3.7/css/grayscale.min.css">
   <link href="https://fonts.googleapis.com/css?family=Chivo:300,400,700&display=swap" rel="stylesheet">
-<!--
+  <!--
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/3.3.7/css/grayscale.min.css">
 -->
 
   <!-- Leaflet -->
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css">
   <script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script>
 
-  <link rel="stylesheet" href="{{ "/css/main.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ " /css/main.css" | relative_url }}">
 
-  <script
-			  src="https://code.jquery.com/jquery-3.4.1.slim.js"
-			  integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
-			  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.js"
+    integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
 
 </head>
