Intro section enhancements

--- a/_includes/home/intro.html
+++ b/_includes/home/intro.html
@@ -3,9 +3,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1>{{ site.t[page.lang].intro_section.headline }}</h1>
-          <h4 class="margin: 0px">{{ site.t[page.lang].intro_section.location }}</h4>
-          <h2>{{ site.t[page.lang].intro_section.dates }}</h2>
+          <img src="https://placehold.co/220x320" class="intro-logo" alt="State of the Map Latam 2024 Logo">
+
+          <div class="intro-headline">{{ site.t[page.lang].intro_section.headline }}</div>
+          <div class="intro-dates">{{ site.t[page.lang].intro_section.dates }}</div>
           <div class="about-button">
             <span class="col-xs-12 col-sm-4 btn-item">
               <a class="btn btn-default" href="https://www.eventbrite.com/e/osm-latam-py-2024-tickets-70204859625"
