Update website url for different environments

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <meta name="author" content="{{ site.author }}">
 
   <!-- Open Graph data -->
-  <meta property="og:image" content="/images/intro-background-1920.jpg">
+  <meta property="og:image" content="{{ site.website }}/images/intro-background-1920.jpg">
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="og:type" content="website">
   <meta property="og:title" content="{{ site.title }}">
