Update about section

--- a/_includes/home/about.html
+++ b/_includes/home/about.html
@@ -5,11 +5,9 @@
   {% when "pt" %}
   <h2>Sobre este evento</h2>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam diam sem, tempor eget faucibus non, dictum vitae
-    nibh. Etiam vitae justo ac tellus iaculis faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-    posuere cubilia curae; Ut sed posuere turpis. Maecenas sollicitudin, magna a commodo pulvinar, tellus tellus
-    tristique neque, eget aliquam erat ipsum eu nisl. Donec volutpat sed lacus quis ultricies. Praesent dignissim
-    porttitor mi, ut dignissim mi.
+    O State of the Map Latam 2024, sediado em Belém do Pará, é a sexta conferência latino-americana do OpenStreetMap. O
+    evento, organizado pela comunidade, visa reunir mapeadores, desenvolvedores, pesquisadores e entusiastas do
+    OpenStreetMap para compartilhar experiências, aprender e colaborar com o projeto.
   </p>
 
   <p></p>
@@ -17,21 +15,17 @@
   {% when "en" %}
   <h2>About this event</h2>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam diam sem, tempor eget faucibus non, dictum vitae
-    nibh. Etiam vitae justo ac tellus iaculis faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-    posuere cubilia curae; Ut sed posuere turpis. Maecenas sollicitudin, magna a commodo pulvinar, tellus tellus
-    tristique neque, eget aliquam erat ipsum eu nisl. Donec volutpat sed lacus quis ultricies. Praesent dignissim
-    porttitor mi, ut dignissim mi.
+    The State of the Map Latam 2024, hosted in Belém do Pará, is the sixth Latin American OpenStreetMap conference. The
+    event, organized by the community, aims to bring together mappers, developers, researchers, and OpenStreetMap
+    enthusiasts to share experiences, learn, and collaborate on the project.
   </p>
 
   {% else %}
   <h2>Acerca de este evento</h2>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam diam sem, tempor eget faucibus non, dictum vitae
-    nibh. Etiam vitae justo ac tellus iaculis faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-    posuere cubilia curae; Ut sed posuere turpis. Maecenas sollicitudin, magna a commodo pulvinar, tellus tellus
-    tristique neque, eget aliquam erat ipsum eu nisl. Donec volutpat sed lacus quis ultricies. Praesent dignissim
-    porttitor mi, ut dignissim mi.
+    El State of the Map Latam 2024, con sede en Belém do Pará, es la sexta conferencia latinoamericana de OpenStreetMap.
+    El evento, organizado por la comunidad, tiene como objetivo reunir a cartógrafos, desarrolladores, investigadores y
+    entusiastas de OpenStreetMap para compartir experiencias, aprender y colaborar en el proyecto.
   </p>
 
   {% endcase %}
