--- a/_includes/home/sponsors.html
+++ b/_includes/home/sponsors.html
@@ -1,4 +1,8 @@
+{% assign t = site.t[page.lang].sponsor_section %}
+{% assign contact_url = site.contact_form_url[page.lang] %}
+
 <section id="sponsors" class="container content-section text-center">
-
-
+  <h1>{{ t.sponsors_title }}</h1>
+  <p>{{ t.sponsors_description }}</p>
+  <a target="_blank" href="{{ contact_url }}" class="btn btn-default">{{ t.contact_button }}</a>
 </section>
