Move dependencies locally

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,9 @@
 
 </div>
 
+
 <!-- Javascript
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-  integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script type="text/javascript"
-  src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/3.3.7/js/grayscale.min.js"></script>
+<script src="/assets/vendor/jquery-2.2.4.min.js"></script>
+<script src="/assets/vendor/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/assets/vendor/grayscale-3.3.7/grayscale-3.3.7.min.js"></script>
