--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,20 @@
-<div id="mastfooter">
+<footer class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <p class="text-muted">© 2024 OpenStreetMap Latam</p>
+    </div>
+    <div class="col-md-4 col-md-offset-4 text-right">
+      <ul class="list-inline">
+        {% for social in site.social %}
+        <li><a class="text-muted" href="{{ social[1].url }}"><i class="fa {{ social[1].font_awesome_icon }}"
+              style="font-size: 24px;"></i></a></li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+</footer>
 
-</div>
+
 
 
 <!-- Javascript
