--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
-{% include head.html %}
+{% include common/head.html %}
 
 <body>
 
@@ -15,9 +15,9 @@
   </div>
 
   {% else %}
-  {% include header.html %}
+  {% include common/header.html %}
   {{ content }}
-  {% include footer.html %}
+  {% include common/footer.html %}
   {% endif %}
 
 </body>
