--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -36,7 +36,17 @@ body {
   .intro-logo {
     display: block;
     margin: 0 auto; // Centers the image
-    border-bottom: 1px solid $color-text-default; 
+    border-bottom: 1px solid $color-text-default;
+    width: 100%;
+    height: auto;
+
+    @media (min-width: 768px) {
+      width: 50%;
+    }
+
+    @media (min-width: 992px) {
+      width: 50%;
+    }
   }
 
   .intro-headline, .intro-dates {
