--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -95,3 +95,7 @@ body {
 .intro h1, .intro h2, .intro h4 {
   text-shadow: 2px 2px 4px $color-text-shadow; // Text shadow for legibility
 }
+
+#map {
+  margin-top: 100px;
+}
