Update map and other small fixes

--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -1,4 +1,4 @@
-<footer class="container">
+<footer class="footer container">
   <div class="row">
     <div class="col-md-4">
       <p class="text-muted">© 2024 OpenStreetMap Latam</p>
