--- a/_includes/home/program.html
+++ b/_includes/home/program.html
@@ -1,4 +1,4 @@
-<section id="program-info" class="container content-section text-center">
+<section id="program" class="container content-section text-center">
   <div class="container">
     {% assign t = site.t[page.lang].program_section %}
     {% assign program_stage = site.program.stage %}
