--- a/_includes/home/about.html
+++ b/_includes/home/about.html
@@ -30,9 +30,10 @@
   {% endcase %}
 
 
-  <div id="map" data-coordinates="{{ site.map_config.coordinates | jsonify }}"
+  <div id="map" data-map_center="{{ site.map_config.map_center | jsonify }}"
     data-zoom-level="{{ site.map_config.zoom_level }}"
-    data-popup-content="{{ site.map_config.popup_content | escape }}">
+    data-marker_lat_lng="{{ site.map_config.marker_lat_lng | jsonify }}">
+
   </div>
 
 </section>
@@ -40,7 +41,8 @@
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     var mapElement = document.getElementById('map');
-    var coordinates = JSON.parse(mapElement.getAttribute('data-coordinates'));
+    var coordinates = JSON.parse(mapElement.getAttribute('data-map_center'));
+    var markerLatLng = JSON.parse(mapElement.getAttribute('data-marker_lat_lng'));
     var zoomLevel = parseInt(mapElement.getAttribute('data-zoom-level'), 10);
 
     // Define the HTML content for the popup with better organization
@@ -50,7 +52,19 @@
         Avenida Almirante Barroso, nº 1155, Marco<br>
         Belém, PA<br>
         Brazil<br>
-        <a href="https://www.openstreetmap.org/way/537204680" target="_blank">View on OpenStreetMap</a>
+        <br>
+        <a href="https://www.openstreetmap.org/way/537204680" target="_blank">
+          <i class="fa fa-map-marker"></i> OpenStreetMap
+        </a><br>
+        <a href="https://maps.apple.com/?q=IFPA, Avenida Almirante Barroso, 1155, Marco, Belém, PA, Brazil" target="_blank">
+          <i class="fa fa-map-marker"></i> Apple Maps
+        </a><br>
+        <a href="https://www.google.com/maps/search/?api=1&query=IFPA, Avenida Almirante Barroso, 1155, Marco, Belém, PA, Brazil" target="_blank">
+          <i class="fa fa-map-marker"></i> Google Maps
+        </a><br>
+        <a href="https://waze.com/ul?q=IFPA, Avenida Almirante Barroso, 1155, Marco, Belém, PA, Brazil" target="_blank">
+          <i class="fa fa-map-marker"></i> Waze
+        </a>
       </div>
     `;
 
@@ -60,6 +74,6 @@
     }).addTo(map);
 
     // Create a marker and bind popup with content, and open it by default
-    var marker = L.marker(coordinates).addTo(map).bindPopup(popupContent).openPopup();
+    var marker = L.marker(markerLatLng).addTo(map).bindPopup(popupContent).openPopup();
   });
 </script>
