Update assets links

--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -19,6 +19,6 @@
 
 <!-- Javascript
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<script src="/assets/vendor/jquery-2.2.4.min.js"></script>
-<script src="/assets/vendor/bootstrap-3.3.7/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/assets/vendor/grayscale-3.3.7/grayscale-3.3.7.min.js"></script>
+<script src="{{ site.website }}/assets/vendor/jquery-2.2.4.min.js"></script>
+<script src="{{ site.website }}/assets/vendor/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="{{ site.website }}/assets/vendor/grayscale-3.3.7/grayscale-3.3.7.min.js"></script>
