--- a/_includes/common/head.html
+++ b/_includes/common/head.html
@@ -33,12 +33,12 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/vendor/font-awesome-4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/assets/vendor/bootstrap-3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/vendor/grayscale-3.3.7/grayscale-3.3.7.min.css">
+  <link rel="stylesheet" href="{{ site.website }}/assets/vendor/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{{ site.website }}/assets/vendor/bootstrap-3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ site.website }}/assets/vendor/grayscale-3.3.7/grayscale-3.3.7.min.css">
   <link href="https://fonts.googleapis.com/css?family=Chivo:300,400,700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="{{ site.website }}/assets/css/styles.css">
 
   <!-- Leaflet -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css">
