--- a/_includes/home/intro.html
+++ b/_includes/home/intro.html
@@ -9,7 +9,7 @@
 
           <div class="intro-headline">{{ t.intro_section.headline }}</div>
           <div class="intro-dates">{{ t.intro_section.dates }}</div>
-          <div class="about-button">
+          <div class="intro-buttons">
             {% if site.registrations.open %}
             <span class="col-xs-12 col-sm-4 btn-item">
               <a class="btn btn-default" href="{{ site.registrations.url }}" target="_blank" role="button">{{
