--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -78,6 +78,10 @@ body {
     font-weight: 700;
     padding: 20px 0;
   }
+
+  .intro-buttons {
+    padding: 100px 0;
+  }
 }
 
 .intro::before, .intro::after {
